--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">HOW MUCH MONEY DO YOU HAVE ?</h1>
+                <h1 class = "header_text">WHAT IS YOUR NAME ?</h1>
                 <h1 class = "header_text">HONEST ANSWER.</h1>
             </div>
             <div class="gif_container">
